@@ -14,6 +14,9 @@
 
 	Added :chi[story] command to menu mode.
 
+	Added 'hloptions' option to configure which columns get colored.  Thanks to
+	qsmodo.
+
 	Don't draw right padding on a truncated rightmost column of a transposed
 	ls-like view.
 
